# learning_words

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_connection.py  test_models.py
alembic/: env.py
alembic/versions/: e6c11b4ccdd1_create_users_table.py
app/: config.py  main.py
app/database/: config.py  session.py
app/dependencies/: auth.py  roles.py  services.py
app/enums/: exercise_type.py  request_status.py  request_type.py  source_type.py  user_role.py
app/models/: __init__.py  exercise_result.py  session.py  student_words.py  teacher_student_request.py  teacher_student_requests.py  teacher_students.py  user.py  words.py
app/repositories/: exercise_result_repository.py  session_repository.py  student_word_repository.py  student_words_repository.py  teacher_student_repository.py  teacher_student_request_repository.py  user_repository.py  word_repository.py
app/routers/: auth.py  exercise.py  statistics.py  student_word.py  teacher_dashboard.py  teacher_student.py  teacher_student_request.py  word.py
app/schemas/: auth.py  exercise_types.py  exercises.py  next_exercise.py  statistics.py  student_words.py  teacher_dashboard.py  teacher_student_request.py  user.py  words.py
app/services/: auth_service.py  current_user_service.py  exercise_service.py  password_service.py  student_statistics_service.py  student_word_service.py  teacher_dashboard_service.py  teacher_student_request_service.py  teacher_student_service.py  token_service.py  word_service.py
app/services/exercises/: assemble_sentence.py  base.py  factory.py  ko_to_ru.py  (+2 more)
(+2 files in other folders)
